--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,7 +54,7 @@ services:
     ports:
       - "8000:8000"
     # Se ejecuta el script de inicialización al iniciar el contenedor.
-    command: ["sh", "-c", "chmod +x /var/www/init.sh && /var/www/init.sh "]
+    # command: ["sh", "-c", "chmod +x /var/www/init.sh && /var/www/init.sh "]
 
   # React Frontend (desarrollo)
   client:
