Creating colums photo

--- a/Server/.env.docker
+++ b/Server/.env.docker
@@ -4,6 +4,12 @@ APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost:8000/
 
+# Cloudinary Configuration
+CLOUDINARY_URL=cloudinary://783118976756963:AQcpf41w2btX_TRERNpx4CSWF9I@da7wenmzy
+CLOUDINARY_CLOUD_NAME=da7wenmzy
+CLOUDINARY_API_KEY=783118976756963
+CLOUDINARY_API_SECRET=AQcpf41w2btX_TRERNpx4CSWF9I
+
 
 DB_CONNECTION=pgsql
 DB_HOST=db
