--- a/Server/Dockerfile
+++ b/Server/Dockerfile
@@ -1,6 +1,6 @@
 FROM php:8.2-fpm-alpine
 
-# Instalar dependencias y la extensión pdo_pgsql
+# Instalar dependencias y extensiones necesarias
 RUN apk update && apk add --no-cache \
     git \
     unzip \
@@ -11,8 +11,19 @@ RUN apk update && apk add --no-cache \
     bash \
     && docker-php-ext-install pdo pdo_pgsql
 
-# Instalar Composer (se copia desde la imagen oficial)
+# Instalar Composer
 COPY --from=composer:2 /usr/bin/composer /usr/bin/composer
 
 # Establecer el directorio de trabajo
 WORKDIR /var/www
+
+# Copiar archivos del proyecto
+COPY . .
+
+# Copiar el script de inicialización y hacerlo ejecutable
+COPY init.sh /usr/local/bin/init.sh
+RUN chmod +x /usr/local/bin/init.sh \
+    && dos2unix /usr/local/bin/init.sh
+
+# Establecer el comando por defecto
+CMD ["/usr/local/bin/init.sh"]
