--- a/client/package.json
+++ b/client/package.json
@@ -13,9 +13,11 @@
     "@types/leaflet": "^1.9.17",
     "autoprefixer": "^10.4.21",
     "axios": "^1.8.4",
+    "date-fns": "^4.1.0",
     "leaflet": "^1.9.4",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
+    "react-big-calendar": "^1.18.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
@@ -35,5 +37,10 @@
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
     "vite": "^6.2.0"
+  },
+  "pnpm": {
+    "ignoredBuiltDependencies": [
+      "esbuild"
+    ]
   }
 }
